--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Book Shop</string>
     <string name="title_activity_book_list">BookListActivity</string>
+    <string name="title_activity_cart_example">CartExample</string>
 </resources>
