--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Book Shop</string>
     <string name="title_activity_book_list">BookListActivity</string>
     <string name="title_activity_cart_example">CartExample</string>
+    <string name="title_activity_book_detail">Book details</string>
 </resources>
