chore: Rename package and app to our names

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Book Shop</string>
+    <string name="app_name">Book Shop (BARDON/SASSI)</string>
     <string name="title_activity_book_list">BookListActivity</string>
     <string name="title_activity_cart_example">Cart</string>
     <string name="title_activity_book_detail">Book details</string>
